<resources>
    <string name="app_name">FitZay</string>
    <string name="wish_it">Wish it</string>
    <string name="want_it">Want it</string>
    <string name="do_it">Do it</string>
    <string name="what_name">What\'s your name?</string>
    <string name="enter_here">Enter here...</string>
    <string name="welcome_fitness">Welcome to FitZay</string>
    <string name="what_gender">What\'s your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="what_your_weight">What is your weight?</string>
    <string name="what_your_target_weight">Alright, now your target weight.</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>
    <string name="how_tall_you">How tall are you?</string>
    <string name="feet">ft&amp;in</string>
    <string-array name="cm">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>116</item>
        <item>117</item>
        <item>118</item>
        <item>119</item>
        <item>120</item>
        <item>121</item>
        <item>122</item>
        <item>123</item>
        <item>124</item>
        <item>125</item>
        <item>126</item>
        <item>127</item>
        <item>128</item>
        <item>129</item>
        <item>130</item>
        <item>131</item>
        <item>132</item>
        <item>133</item>
        <item>134</item>
        <item>135</item>
        <item>136</item>
        <item>137</item>
        <item>138</item>
        <item>139</item>
        <item>140</item>
        <item>141</item>
        <item>142</item>
        <item>143</item>
        <item>144</item>
        <item>145</item>
        <item>146</item>
        <item>147</item>
        <item>148</item>
        <item>149</item>
        <item>150</item>
        <item>151</item>
        <item>152</item>
        <item>153</item>
        <item>154</item>
        <item>155</item>
        <item>156</item>
        <item>157</item>
        <item>158</item>
        <item>159</item>
        <item>160</item>
        <item>161</item>
        <item>162</item>
        <item>163</item>
        <item>164</item>
        <item>165</item>
        <item>166</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
        <item>180</item>
        <item>181</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>185</item>
        <item>186</item>
        <item>187</item>
        <item>188</item>
        <item>189</item>
        <item>190</item>
        <item>191</item>
        <item>192</item>
        <item>193</item>
        <item>194</item>
        <item>195</item>
        <item>196</item>
        <item>197</item>
        <item>198</item>
        <item>199</item>
        <item>200</item>
        <item>201</item>
        <item>202</item>
        <item>203</item>
        <item>204</item>
        <item>205</item>
        <item>206</item>
        <item>207</item>
        <item>208</item>
        <item>209</item>
        <item>210</item>
        <item>211</item>
        <item>212</item>
        <item>213</item>
        <item>214</item>
        <item>215</item>
        <item>216</item>
        <item>217</item>
        <item>218</item>
        <item>219</item>
        <item>220</item>
        <item>221</item>
        <item>222</item>
        <item>223</item>
        <item>224</item>
        <item>225</item>
        <item>226</item>
        <item>227</item>
        <item>228</item>
        <item>229</item>
        <item>230</item>
        <item>231</item>
        <item>232</item>
        <item>233</item>
        <item>234</item>
        <item>235</item>
        <item>236</item>
        <item>237</item>
        <item>238</item>
        <item>239</item>
        <item>240</item>
        <item>241</item>
        <item>242</item>
        <item>243</item>
        <item>244</item>
        <item>245</item>
        <item>246</item>
        <item>247</item>
        <item>248</item>
        <item>249</item>
        <item>250</item>
        <item>251</item>
        <item>252</item>
        <item>253</item>
        <item>254</item>
        <item>255</item>
        <item>256</item>
        <item>257</item>
        <item>258</item>
        <item>259</item>
        <item>260</item>
        <item>261</item>
        <item>262</item>
        <item>263</item>
        <item>264</item>
        <item>265</item>
        <item>266</item>
        <item>267</item>
        <item>268</item>
        <item>269</item>
        <item>270</item>
        <item>271</item>
        <item>272</item>
        <item>273</item>
        <item>274</item>
        <item>275</item>
        <item>276</item>
        <item>277</item>
        <item>278</item>
        <item>279</item>
        <item>280</item>
        <item>281</item>
        <item>282</item>
        <item>283</item>
        <item>284</item>
        <item>285</item>
        <item>286</item>
        <item>287</item>
        <item>288</item>
        <item>289</item>
        <item>290</item>
        <item>291</item>
        <item>292</item>
        <item>293</item>
        <item>294</item>
        <item>295</item>
        <item>296</item>
        <item>297</item>
        <item>298</item>
        <item>299</item>
        <item>300</item>
    </string-array>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="how_old_you">How old are you?</string>
    <string name="plan">Plan</string>
    <string name="workout">Workout</string>
    <string name="stats">Stats</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>
    <string name="water_reminder">Water Intake</string>
    <string name="lower_body">Lower Body</string>
    <string name="upper_body">Upper Body</string>
    <string name="abs_core">Abs &amp; Core</string>
    <string name="steps">Steps</string>
    <string name="abs_beginner">Abs Beginner</string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="workout_categories">Workout Categories</string>
    <string name="recent_exercise">Recent Exercise</string>
    <string name="monthly_workout_plans">Monthly Workout Plans</string>
    <string name="sleep_tracker">Sleep tracker</string>
    <string name="time_in_bed">Time in Bed</string>
    <string name="step_counter">Step Counter</string>
    <string name="today">Today</string>
    <string name="start">START</string>
    <string name="take_a_rest">Take A Rest</string>
    <string name="complete_ex">"Nice, you've completed exercise!</string>
    <string name="exercise">Exercise</string>
    <string name="calories">"Calorie</string>
    <string name="time">Time</string>
    <string name="do_you_feel">How do you feel</string>
    <string name="workout_feedback">Your feedback will help us provide more suitable workouts for you</string>
    <string name="too_hard">Too hard</string>
    <string name="too_easy">Too Easy</string>
    <string name="just_right">Just right</string>
    <string name="done">Done</string>
    <string name="full_body">Full Body</string>
    <string name="monthly_challenge">Monthly Challenge</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="daily_average">Daily Average</string>
    <string name="be_premium">Be Premium</string>
    <string name="unlimited_access">Get Unlimited access</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="unlimited_workout_plans">Unlimited workout plans</string>
    <string name="unlock_all_plans">Unlock all plans</string>
    <string name="week_of_membership">1 week of membership</string>
    <string name="month_of_membership">1 month of membership</string>
    <string name="year_of_membership">1 year of membership</string>
    <string name="subscribe">Subscribe</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="ready_to_go">Ready to go!</string>
    <string name="unfinish">Continue the unfinished\nworkout?</string>
    <string name="unfinish_">Continue</string>
    <string name="unlock_pri">UNLOCK PREMIUM\nWORKOUT</string>
    <string name="unlock_pri_sub">Watch a short video to unlock the\npremium workout once for free</string>
    <string name="watch_ad">watch ad</string>
    <string name="go_premium">Go Premium</string>
    <string name="daily_motivation">Daily Motivation</string>
    <string name="skip">Skip</string>
    <string name="daily">DAILY AVERAGE</string>
    <string name="daily_">Daily </string>
    <string name="weekly_">Weekly </string>
    <string name="monthly_">Monthly </string>
    <string name="summary">Summary </string>
    <string name="bed_time">Bed Time</string>
    <string name="wake_time">Wake up Time</string>
    <string name="next">Next</string>
    <string name="tonight">Tonight</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
</resources>